manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    app.kubernetes.io/name: helmataart
  name: helmataart
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: helmataart
  template:
    metadata:
      labels:
        app.kubernetes.io/name: helmataart
    spec:
      containers:
      - image: docker.io/helmataart/helmataart-react
        name: helmataart
      dnsConfig:
        options:
          - name: ndots
            value: "2"
