manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: helmataart.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: store-web
            port:
              number: 80
